5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4003/executions/1635_2445.log
== TEST (2019-04-15 12:57:40) 
-- CODE:
n=input("c/f")
t=float(input("valor da temperatura:"))

c=(5*(t-32))/9

f=((9*t)/5)+32

if(n=="c"):
	print(c)
	
else:
	print(f)
-- OUTPUT:
608.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 12:57:57) 
-- CODE:
n=input("c/f")
t=float(input("valor da temperatura:"))

c=(5*(t-32))/9

f=((9*t)/5)+32

if(n=="c"):
	print(c)
	
else:
	print(f)
-- OUTPUT:
608.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 12:58:31) 
-- CODE:
n=input("c/f")
t=float(input("valor da temperatura:"))

c=(5*(t-32))/9

f=(9*t)/5+32

if(n=="c"):
	print(c)
	
else:
	print(f)
-- OUTPUT:
608.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 12:58:49) 
-- CODE:
n=input("c/f")
t=float(input("valor da temperatura:"))

c=(5*(t-32))/9

f=(9*t)/5+32/5

if(n=="c"):
	print(c)
	
else:
	print(f)
-- OUTPUT:
582.4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 12:59:19) 
-- CODE:
n=input("c/f")
t=float(input("valor da temperatura:"))

c=(5*(t-32))/9

f=((9*t)+32)/5

if(n=="c"):
	print(c)
	
else:
	print(f)
-- OUTPUT:
582.4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:00:06) 
-- CODE:
n=input("c/f")
t=float(input("valor da temperatura:"))

c=(5*(t-32))/9

f=((9*t)/5)+32

if(n=="c"):
	print(c)
	
else:
	print(f)
-- OUTPUT:
608.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:02:41) 
-- CODE:
n=input("c/f")
t=float(input("valor da temperatura:"))

c=(5*(t-32))/9

f=(1.8*t)+32

if(n=="c"):
	print(c)
	
else:
	print(f)
-- OUTPUT:
608.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 13:03:20) 
-- CODE:
n=input("c/f")
t=float(input("valor da temperatura:"))

c=(5*(t-32))/9

f=(1.8*t)+32

if(n=="c"):
	print(c)
	
else:
	print(f)
-- EXECUTION TIME:
0.141112
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
608.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
608.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
32.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:03:26) 
-- CODE:
n=input("c/f")
t=float(input("valor da temperatura:"))

c=(5*(t-32))/9

f=(1.8*t)+32

if(n=="c"):
	print(c)
	
else:
	print(f)
-- OUTPUT:
608.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 13:04:23) 
-- CODE:
n=input("c/f")
t=float(input("valor da temperatura:"))

c=(5*(t-32))/9

f=(1.8*t)+32

if(n=="c"):
	print(round(f,2))
	
else:
	print(round(c,2))
-- EXECUTION TIME:
0.160888
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
160.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
-17.78
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:04:24) 
-- CODE:
n=input("c/f")
t=float(input("valor da temperatura:"))

c=(5*(t-32))/9

f=(1.8*t)+32

if(n=="c"):
	print(round(f,2))
	
else:
	print(round(c,2))
-- OUTPUT:
160.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 13:04:35) 
-- CODE:
n=input("c/f")
t=float(input("valor da temperatura:"))

c=(5*(t-32))/9

f=(1.8*t)+32

if(n=="c"):
	print(round(c,2))
	
else:
	print(round(f,2))
-- EXECUTION TIME:
0.170131
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
608.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
608.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
32.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:06:01) 
-- CODE:
n=input("c/f")
t=int(input("valor da temperatura:"))

c=(5*(t-32))/9

f=(1.8*t)+32

if(n=="c"):
	print(round(c,2))
	
else:
	print(round(f,2))
-- OUTPUT:
608.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:07:21) 
-- CODE:
n=input("c/f")
t=int(input("valor da temperatura:"))

c=(5*(t-32))/9

f=((1.8*t)+32)

if(n=="c"):
	print(round(c,2))
	
else:
	print(round(f,2))
-- OUTPUT:
608.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:09:36) 
-- CODE:
n=input("c/f")
t=int(input("valor da temperatura:"))

c=(5*(t-32))/9

f=((1.8*t)+32)

if(n=="c"):
	print(round(c,2))
	
else:
	print(round(f,2))
-- OUTPUT:
608.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:10:24) 
-- CODE:
n=input("c/f")
t=int(input("valor da temperatura:"))

c=(5*(t-32))/9

f=(9/5)*(t+32)

if(n=="c"):
	print(round(c,2))
	
else:
	print(round(f,2))
-- OUTPUT:
633.6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 13:10:26) 
-- CODE:
n=input("c/f")
t=int(input("valor da temperatura:"))

c=(5*(t-32))/9

f=(9/5)*(t+32)

if(n=="c"):
	print(round(c,2))
	
else:
	print(round(f,2))
-- EXECUTION TIME:
0.162548
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
633.6
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
633.6
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
57.6
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:10:26) 
-- CODE:
n=input("c/f")
t=int(input("valor da temperatura:"))

c=(5*(t-32))/9

f=(9/5)*(t+32)

if(n=="c"):
	print(round(c,2))
	
else:
	print(round(f,2))
-- OUTPUT:
633.6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:10:45) 
-- CODE:
n=input("c/f")
t=int(input("valor da temperatura:"))

c=(5*(t-32))/9

f=(9/5)*(t+32)

if(n=="c"):
	print(round(f,2))
	
else:
	print(round(c,2))
-- OUTPUT:
160.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 13:10:55) 
-- CODE:
n=input("c/f")
t=int(input("valor da temperatura:"))

c=(5*(t-32))/9

f=(9/5)*(t+32)

if(n=="c"):
	print(round(f,2))
	
else:
	print(round(c,2))
-- EXECUTION TIME:
0.159401
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
160.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
-17.78
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:11:03) 
-- CODE:
n=input("c/f")
t=int(input("valor da temperatura:"))

c=(5*(t-32))/9

f=(9/5)*(t+32)

if(n=="c"):
	print(round(f,2))
	
else:
	print(round(c,2))
-- OUTPUT:
160.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 13:11:23) 
-- CODE:
n=input("c/f")
t=int(input("valor da temperatura:"))

c=(5*(t-32))/9

f=(9/5)*(t+32)

if(n=="f"):
	print(round(c,2))
	
else:
	print(round(f,2))
-- EXECUTION TIME:
0.131671
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
633.6
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
633.6
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
57.6
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:11:24) 
-- CODE:
n=input("c/f")
t=int(input("valor da temperatura:"))

c=(5*(t-32))/9

f=(9/5)*(t+32)

if(n=="f"):
	print(round(c,2))
	
else:
	print(round(f,2))
-- OUTPUT:
633.6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:11:36) 
-- CODE:
n=input("c/f")
t=int(input("valor da temperatura:"))

c=(5*(t-32))/9

f=(9/5)*(t+32)

if(n=="f"):
	print(round(c,2))
	
else:
	print(round(f,2))
-- OUTPUT:
633.6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 13:12:05) 
-- CODE:
n=input("c/f")
t=int(input("valor da temperatura:"))

c=(5/9)*(t-32)

f=(9/5)*(t+32)

if(n=="f"):
	print(round(c,2))
	
else:
	print(round(f,2))
-- EXECUTION TIME:
0.189938
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
633.6
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
633.6
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
57.6
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:12:08) 
-- CODE:
n=input("c/f")
t=int(input("valor da temperatura:"))

c=(5/9)*(t-32)

f=(9/5)*(t+32)

if(n=="f"):
	print(round(c,2))
	
else:
	print(round(f,2))
-- OUTPUT:
633.6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:12:11) 
-- CODE:
n=input("c/f")
t=int(input("valor da temperatura:"))

c=(5/9)*(t-32)

f=(9/5)*(t+32)

if(n=="f"):
	print(round(c,2))
	
else:
	print(round(f,2))
-- OUTPUT:
633.6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 13:12:13) 
-- CODE:
n=input("c/f")
t=int(input("valor da temperatura:"))

c=(5/9)*(t-32)

f=(9/5)*(t+32)

if(n=="f"):
	print(round(c,2))
	
else:
	print(round(f,2))
-- EXECUTION TIME:
0.214446
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
633.6
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
633.6
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
57.6
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:12:25) 
-- CODE:
n=input("c/f")
t=int(input("valor da temperatura:"))

c=(5/9)*(t-32)

f=(9/5)*(t+32)

if(n=="c"):
	print(round(f,2))
	
else:
	print(round(c,2))
-- OUTPUT:
160.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:13:21) 
-- CODE:
n=input("c/f")
t=int(input("valor da temperatura:"))

c=(5/9)*(t-32)

f=(9*(t+32))5

if(n=="c"):
	print(round(f,2))
	
else:
	print(round(c,2))
-- ERROR:
File "XXXX", line 6
    f=(9*(t+32))5
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:13:27) 
-- CODE:
n=input("c/f")
t=int(input("valor da temperatura:"))

c=(5/9)*(t-32)

f=(9*(t+32))/5

if(n=="c"):
	print(round(f,2))
	
else:
	print(round(c,2))
-- OUTPUT:
160.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:14:20) 
-- CODE:
n=input("c/f")
t=int(input("valor da temperatura:"))

c=(5/9)*(t-32)

f=(1.8*t)+32

if(n=="c"):
	print(round(f,2))
	
else:
	print(round(c,2))
-- OUTPUT:
160.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 13:14:28) 
-- CODE:
n=input("c/f")
t=int(input("valor da temperatura:"))

c=(5/9)*(t-32)

f=(1.8*t)+32

if(n=="c"):
	print(round(f,2))
	
else:
	print(round(c,2))
-- EXECUTION TIME:
0.284561
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
160.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
-17.78
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:14:32) 
-- CODE:
n=input("c/f")
t=int(input("valor da temperatura:"))

c=(5/9)*(t-32)

f=(1.8*t)+32

if(n=="c"):
	print(round(f,2))
	
else:
	print(round(c,2))
-- OUTPUT:
160.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:14:40) 
-- CODE:
n=input("c/f")
t=int(input("valor da temperatura:"))

c=(5/9)*(t-32)

f=(1.8*t)+32

if(n=="c"):
	print(round(f,2))
	
else:
	print(round(c,2))
-- OUTPUT:
160.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 13:14:43) 
-- CODE:
n=input("c/f")
t=int(input("valor da temperatura:"))

c=(5/9)*(t-32)

f=(1.8*t)+32

if(n=="c"):
	print(round(f,2))
	
else:
	print(round(c,2))
-- EXECUTION TIME:
0.204736
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
160.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
-17.78
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:15:33) 
-- CODE:
n=input("c/f")
t=int(input("valor da temperatura:"))

c=(5/9)*(t-32)

f=(1.8*t)+32

if(n=="c"):
	print(round(f,2))
	
else:
	print(round(c,2))
-- OUTPUT:
160.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:15:33) 
-- CODE:
n=input("c/f")
t=int(input("valor da temperatura:"))

c=(5/9)*(t-32)

f=(1.8*t)+32

if(n=="c"):
	print(round(f,2))
	
else:
	print(round(c,2))
-- OUTPUT:
160.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 13:15:35) 
-- CODE:
n=input("c/f")
t=int(input("valor da temperatura:"))

c=(5/9)*(t-32)

f=(1.8*t)+32

if(n=="c"):
	print(round(f,2))
	
else:
	print(round(c,2))
-- EXECUTION TIME:
0.168338
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
160.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
-17.78
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:16:20) 
-- CODE:
n=input("c/f")
t=int(input("valor da temperatura:"))

c=(5/9)*(t-32)

f=(1.8*t)+32

if(n=="c"):
	print(round(f,2))
	
else:
	print(round(c,2))
-- OUTPUT:
160.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:16:30) 
-- CODE:
n=input("c/f")
t=int(input("valor da temperatura:"))

c=(5/9)*(t-32)

f=(1.8*t)+32

if(n=="c"):
	print(round(f,2))
	
else:
	print(round(c,2))
-- OUTPUT:
160.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 13:16:48) 
-- CODE:
n=input("c/f")
t=int(input("valor da temperatura:"))

c=(5/9)*(t-32)

f=(1.8*t)+32

if(n=="c"):
	print(round(f,2))
	
else:
	print(round(c,2))
-- EXECUTION TIME:
0.150461
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
160.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
-17.78
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:17:06) 
-- CODE:
n=input("c/f")
t=int(input("valor da temperatura:"))

c=(5/9)*(t-32)

f=(1.8*t)+32

if(n=="c"):
	print(round(f,2))
	
else:
	print(round(c,2))
-- OUTPUT:
160.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 13:17:19) 
-- CODE:
n=input("c/f")
t=int(input("valor da temperatura:"))

c=(5/9)*(t-32)

f=(1.8*t)+32

if(n=="c"):
	print(round(f,2))
	
else:
	print(round(c,2))
-- EXECUTION TIME:
0.122345
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
160.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
-17.78
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:17:43) 
-- CODE:
n=input("C/F")
t=int(input("valor da temperatura:"))

C=(5/9)*(t-32)

F=(1.8*t)+32

if(n=="c"):
	print(round(F,2))
	
else:
	print(round(C,2))
-- OUTPUT:
160.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 13:17:56) 
-- CODE:
n=input("C/F")
t=int(input("valor da temperatura:"))

C=(5/9)*(t-32)

F=(1.8*t)+32

if(n=="C"):
	print(round(F,2))
	
else:
	print(round(C,2))
-- EXECUTION TIME:
0.278588
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
608.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
32.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
